Closed Bug 391622 Opened 18 years ago Closed 18 years ago

nsIWinAccessNode doesn't work, QI always fails

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access)

Attachments

(1 file)

Trying to QueryInterface to nsIWinAccessNode fails.
Attachment #276067 - Flags: review?(surkov.alexander)
Attachment #276067 - Flags: approval1.9?
Drivers: extremely low risk. Must fix.
Comment on attachment 276067 [details] [diff] [review] Call up to correct QI >Index: accessible/src/base/nsAccessible.cpp >=================================================================== >RCS file: /cvsroot/mozilla/accessible/src/base/nsAccessible.cpp,v >retrieving revision 1.294 >diff -p -u -5 -r1.294 nsAccessible.cpp >--- accessible/src/base/nsAccessible.cpp 8 Aug 2007 13:46:38 -0000 1.294 >+++ accessible/src/base/nsAccessible.cpp 10 Aug 2007 02:22:39 -0000 >@@ -242,11 +242,11 @@ nsresult nsAccessible::QueryInterface(RE > return NS_OK; > } > return NS_ERROR_NO_INTERFACE; > } > >- return nsAccessNode::QueryInterface(aIID, aInstancePtr); >+ return nsAccessNodeWrap::QueryInterface(aIID, aInstancePtr); > } I don't get why you try to call wrap method because wrap class doesn't define nsISupports::QueryInterface(). > > nsAccessible::nsAccessible(nsIDOMNode* aNode, nsIWeakReference* aShell): nsAccessNodeWrap(aNode, aShell), > mParent(nsnull), mFirstChild(nsnull), mNextSibling(nsnull), mRoleMapEntry(nsnull), > mAccChildCount(eChildCountUninitialized)
Comment on attachment 276067 [details] [diff] [review] Call up to correct QI you're right, r=me
Attachment #276067 - Flags: review?(surkov.alexander) → review+
Attachment #276067 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: