Bug 391622. nsIWinAccessNode doesn't work, QI always fails. r=surkov, a=dsiore